testsuite/bsc.names/portRenaming/invalidAttrs/ready/Space.bsv

interface Ifc;
 (* ready = "ch eck" *)
 method Bool check ();
endinterface

